tutorial notebook tweaks in progress

--- a/notebooks/ipfix-tutorial.ipynb
+++ b/notebooks/ipfix-tutorial.ipynb
@@ -29,12 +29,21 @@
       "from IPython.display import SVG\n",
       "\n",
       "def iso8601(x):\n",
-      "    return datetime.strptime(x+\" +0000\", \"%Y-%m-%d %H:%M:%S.%f %Z\")\n"
+      "    return datetime.strptime(x+\" +0000\", \"%Y-%m-%d %H:%M:%S.%f %Z\")\n",
+      "\n",
+      "def draw_message(msg, length=256):\n",
+      "    return SVG(ipfix.vis.MessageBufferRenderer(msg).render(length=length))\n",
+      "\n",
+      "def draw_template(tmpl):\n",
+      "    ofd = ipfix.vis.OctetFieldDrawing(raster=4)\n",
+      "    ipfix.vis.draw_template(ofd, tmpl)\n",
+      "    return SVG(ofd.render((90,30)))\n",
+      "  "
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 1
+     "prompt_number": 9
     },
     {
      "cell_type": "markdown",
@@ -53,7 +62,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 2
+     "prompt_number": 3
     },
     {
      "cell_type": "markdown",
@@ -267,16 +276,48 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "basic counters:"
+      "...and so on (FIXME add more here)"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Templates\n",
+      "---------\n",
+      "\n",
+      "A Template is an ordered sequence of Information Elements that describes the structure of a type of Data Record.\n",
+      "\n",
+      "Let's consider a template defining a simple flow record:"
      ]
     },
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "tmpl = ipfix.template.for_specs(256, \"flowStartMilliseconds\", \n",
+      "                                     \"flowEndMilliseconds\", \n",
+      "                                     \"sourceIPv4Address\", \n",
+      "                                     \"destinationIPv4Address\", \n",
+      "                                     \"octetDeltaCount\", \n",
+      "                                     \"packetDeltaCount\")\n",
+      "draw_template(tmpl)"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "output_type": "pyout",
+       "prompt_number": 10,
+       "svg": [
+        "<svg baseProfile=\"full\" height=\"240\" version=\"1.1\" width=\"450\" xmlns=\"http://www.w3.org/2000/svg\" xmlns:ev=\"http://www.w3.org/2001/xml-events\" xmlns:xlink=\"http://www.w3.org/1999/xlink\"><defs><g font-size=\"17\" id=\"coladdr\"><text style=\"text-anchor: right; dominant-baseline: hanging;\" x=\"72.0\" y=\"0\">0</text><text style=\"text-anchor: right; dominant-baseline: hanging;\" x=\"162.0\" y=\"0\">1</text><text style=\"text-anchor: right; dominant-baseline: hanging;\" x=\"252.0\" y=\"0\">2</text><text style=\"text-anchor: right; dominant-baseline: hanging;\" x=\"342.0\" y=\"0\">3</text></g><g font-size=\"17\" id=\"rowaddr\"><text style=\"text-anchor: left; dominant-baseline: hanging;\" x=\"0\" y=\"0\">0x0</text><text style=\"text-anchor: left; dominant-baseline: hanging;\" x=\"0\" y=\"30\">0x4</text><text style=\"text-anchor: left; dominant-baseline: hanging;\" x=\"0\" y=\"60\">0x8</text><text style=\"text-anchor: left; dominant-baseline: hanging;\" x=\"0\" y=\"90\">0xc</text><text style=\"text-anchor: left; dominant-baseline: hanging;\" x=\"0\" y=\"120\">0x10</text><text style=\"text-anchor: left; dominant-baseline: hanging;\" x=\"0\" y=\"150\">0x14</text><text style=\"text-anchor: left; dominant-baseline: hanging;\" x=\"0\" y=\"180\">0x18</text></g><g id=\"boxes\" stroke=\"black\" stroke-width=\"2\"><rect fill=\"white\" height=\"30\" width=\"180\" x=\"0\" y=\"0\"/><rect fill=\"white\" height=\"30\" width=\"180\" x=\"180\" y=\"0\"/><rect fill=\"white\" height=\"30\" width=\"180\" x=\"0\" y=\"30\"/><rect fill=\"white\" height=\"30\" width=\"180\" x=\"180\" y=\"30\"/><rect fill=\"white\" height=\"30\" width=\"180\" x=\"0\" y=\"60\"/><rect fill=\"white\" height=\"30\" width=\"180\" x=\"180\" y=\"60\"/><rect fill=\"white\" height=\"30\" width=\"180\" x=\"0\" y=\"90\"/><rect fill=\"white\" height=\"30\" width=\"180\" x=\"180\" y=\"90\"/><rect fill=\"white\" height=\"30\" width=\"180\" x=\"0\" y=\"120\"/><rect fill=\"white\" height=\"30\" width=\"180\" x=\"180\" y=\"120\"/><rect fill=\"white\" height=\"30\" width=\"180\" x=\"0\" y=\"150\"/><rect fill=\"white\" height=\"30\" width=\"180\" x=\"180\" y=\"150\"/><rect fill=\"white\" height=\"30\" width=\"180\" x=\"0\" y=\"180\"/><rect fill=\"white\" height=\"30\" width=\"180\" x=\"180\" y=\"180\"/></g><g font-size=\"15\" id=\"text\"><text style=\"text-anchor: middle; dominant-baseline: hanging;\" x=\"90.0\" y=\"15.0\">ID: 256</text><text style=\"text-anchor: middle; dominant-baseline: hanging;\" x=\"270.0\" y=\"15.0\">Count: 6</text><text style=\"text-anchor: middle; dominant-baseline: hanging;\" x=\"90.0\" y=\"45.0\">IE: 152</text><text style=\"text-anchor: middle; dominant-baseline: hanging;\" x=\"270.0\" y=\"45.0\">Len: 8</text><text style=\"text-anchor: middle; dominant-baseline: hanging;\" x=\"90.0\" y=\"75.0\">IE: 153</text><text style=\"text-anchor: middle; dominant-baseline: hanging;\" x=\"270.0\" y=\"75.0\">Len: 8</text><text style=\"text-anchor: middle; dominant-baseline: hanging;\" x=\"90.0\" y=\"105.0\">IE: 8</text><text style=\"text-anchor: middle; dominant-baseline: hanging;\" x=\"270.0\" y=\"105.0\">Len: 4</text><text style=\"text-anchor: middle; dominant-baseline: hanging;\" x=\"90.0\" y=\"135.0\">IE: 12</text><text style=\"text-anchor: middle; dominant-baseline: hanging;\" x=\"270.0\" y=\"135.0\">Len: 4</text><text style=\"text-anchor: middle; dominant-baseline: hanging;\" x=\"90.0\" y=\"165.0\">IE: 1</text><text style=\"text-anchor: middle; dominant-baseline: hanging;\" x=\"270.0\" y=\"165.0\">Len: 8</text><text style=\"text-anchor: middle; dominant-baseline: hanging;\" x=\"90.0\" y=\"195.0\">IE: 2</text><text style=\"text-anchor: middle; dominant-baseline: hanging;\" x=\"270.0\" y=\"195.0\">Len: 8</text></g></defs><use x=\"90\" xlink:href=\"#coladdr\" y=\"0\"/><use x=\"0\" xlink:href=\"#rowaddr\" y=\"15.0\"/><use x=\"90\" xlink:href=\"#boxes\" y=\"15.0\"/><use x=\"90\" xlink:href=\"#text\" y=\"15.0\"/></svg>"
+       ],
+       "text": [
+        "<IPython.core.display.SVG at 0x1060ce3d0>"
+       ]
+      }
+     ],
+     "prompt_number": 10
     }
    ],
    "metadata": {}
