--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,8 @@
-v0.9, 1 July 2013 -- Initial release.
+v0.9,   1 July 2013 -- Initial release.
 
 v0.9.1, 2 July 2013 -- Add missing license headers and LICENSE.txt for GNU LGPL.
+
+v0.9.2, 2 July 2013 -- Fix packaging script errors.
+
+v0.9.3, 9 July 2013 -- Fix tuple decode bug, add (undocumented) vis submodule,
+                       add TCP mode to ipfix2csv.
