tweaks for raspi

--- a/notebooks/ipfix-tutorial.ipynb
+++ b/notebooks/ipfix-tutorial.ipynb
@@ -66,134 +66,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Okay, now we're ready to begin.\n",
-      "\n",
-      "Information Elements\n",
-      "--------------------\n",
-      "\n",
-      "IPFIX provides flexible, self-describing representation of flow records using Templates made up of Information Elements. The set of Information Elements provided in the IANA registry can be used to represent most common entities and values in network traffic data. Each Information Element has a name, which describes (very briefly and not always very well) what it means; a number, which is used to represent it on the wire; and an abstract data type, which defines how it is encoded. \n",
-      "\n",
-      "The Information Elements below are shown in IESpec format, an abbreviated text format described in [the IE Doctors draft](http://tools.ietf.org/html/draft-ietf-ipfix-ie-doctors). The number in parentheses is the IE number on the wire; the string in the angle brackets is the name of the abstract data type, and the number in the square brackets is the native length of the IE in bytes.\n",
-      "\n",
-      "There are information elements for network addresses:"
-     ]
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "str(ipfix.ie.for_spec(\"sourceIPv4Address\"))"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "str(ipfix.ie.for_spec(\"destinationIPv6Address\"))"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {},
-     "source": [
-      "for timestamps at various resolutions:"
-     ]
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "str(ipfix.ie.for_spec(\"flowStartMilliseconds\"))"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "str(ipfix.ie.for_spec(\"observationTimeMicroseconds\"))"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {},
-     "source": [
-      "for packet treatment on forwarding devices:"
-     ]
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "str(ipfix.ie.for_spec(\"bgpDestinationAsNumber\"))"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "str(ipfix.ie.for_spec(\"ipNextHopIPv6Address\"))"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {},
-     "source": [
-      "all sorts of other packet header fields:"
-     ]
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "str(ipfix.ie.for_spec(\"tcpWindowSize\"))"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "str(ipfix.ie.for_spec(\"fragmentIdentification\"))"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "str(ipfix.ie.for_spec(\"destinationTransportPort\"))"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {},
-     "source": [
-      "...and so on."
+      "Okay, now we're ready to begin."
      ]
     },
     {
@@ -347,7 +220,7 @@
       "import socketserver\n",
       "import ipfix.reader\n",
       "\n",
-      "msg_count = 100\n",
+      "msg_count = 5\n",
       "msg_length = 512\n",
       "msg_idx = 0\n",
       "\n",
@@ -369,9 +242,9 @@
       "        for i in range(msg_count):\n",
       "            svgbuf.append(msr.render_next_message(msg_length))\n",
       "\n",
+      "srv = None\n",
       "srv = socketserver.TCPServer((\"\", 4739), StreamRendererHandler)\n",
-      "srv.handle_request()\n",
-      "srv = None"
+      "srv.handle_request()"
      ],
      "language": "python",
      "metadata": {},
@@ -456,9 +329,28 @@
      "outputs": []
     },
     {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Of course, physical measurements are more interesting if they're real. We've attached a cheap temperature-and-humidity sensor to a Raspberry Pi connected to the display laptop to demonstrate two things:\n",
+      "\n",
+      "1. IPFIX can be applied to any push-based event data export task, and\n",
+      "2. the protocol itself is lightweight enough to implement anywhere you realistically have a TCP/IP stack.\n",
+      "\n",
+      "Here, we took an off-the-shelf user-space driver for the sensor attached to the GPIO bins, and added some C code to encode the result as IPFIX, attaching  a static template and message header. This program doesn't even handle network communication; for that, we pipe its binary IPFIX output to nc, which acts as a TCP exporting process given an IPFIX message stream. The results we'll visualize below:"
+     ]
+    },
+    {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "ipfix.ie.for_spec(\"relativeHumidityPercent(35566/3)<float32>[4]\")\n",
+      "msg_idx = 0\n",
+      "svgbuf = []\n",
+      "srv = None\n",
+      "srv = socketserver.TCPServer((\"\", 4739), StreamRendererHandler)\n",
+      "srv.handle_request()"
+     ],
      "language": "python",
      "metadata": {},
      "outputs": []
