make this notebook standalone, tested with raspi

--- a/notebooks/ipfix-tutorial-beyond.ipynb
+++ b/notebooks/ipfix-tutorial-beyond.ipynb
@@ -37,6 +37,14 @@
      "collapsed": false,
      "input": [
       "import ipfix\n",
+      "import ipfix.vis\n",
+      "\n",
+      "from datetime import datetime\n",
+      "from IPython.display import SVG\n",
+      "\n",
+      "def draw_message(msg, length=256):\n",
+      "    return SVG(ipfix.vis.MessageBufferRenderer(msg, raster=4).render(length=length))\n",
+      "\n",
       "ipfix.ie.use_iana_default()\n",
       "ipfix.ie.use_5103_default()\n",
       "ipfix.ie.for_spec(\"ambientTemperatureCelsius(35566/2)<float32>[4]\")"
@@ -59,6 +67,7 @@
       "ttmpl = ipfix.template.for_specs(263, \"observationTimeMilliseconds\", \n",
       "                                      \"observationPointId[4]\",\n",
       "                                      \"ambientTemperatureCelsius\")\n",
+      "msg = ipfix.message.MessageBuffer()\n",
       "msg.begin_export(8304)\n",
       "msg.add_template(ttmpl)\n",
       "msg.export_new_set(263)\n",
@@ -108,7 +117,6 @@
      "input": [
       "import socketserver\n",
       "import ipfix.reader\n",
-      "import ipfix.vis\n",
       "\n",
       "msg_count = 5\n",
       "msg_length = 512\n",
