some timezone fixes

--- a/notebooks/ipfix-tutorial-struct.ipynb
+++ b/notebooks/ipfix-tutorial-struct.ipynb
@@ -26,10 +26,11 @@
       "\n",
       "from ipaddress import ip_address\n",
       "from datetime import datetime\n",
+      "from datetime import timezone\n",
       "from IPython.display import SVG\n",
       "\n",
       "def iso8601(x):\n",
-      "    return datetime.strptime(x+\" +0000\", \"%Y-%m-%d %H:%M:%S.%f %z\")\n",
+      "    return datetime.strptime(x, \"%Y-%m-%d %H:%M:%S.%f\").replace(tzinfo=timezone.utc)\n",
       "\n",
       "def draw_message(msg, length=256):\n",
       "    return SVG(ipfix.vis.MessageBufferRenderer(msg, raster=4).render(length=length))\n",
@@ -42,7 +43,8 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 6
     },
     {
      "cell_type": "markdown",
