--- a/notebooks/ipfix-tutorial-beyond.ipynb
+++ b/notebooks/ipfix-tutorial-beyond.ipynb
@@ -156,6 +156,14 @@
      "language": "python",
      "metadata": {},
      "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
     }
    ],
    "metadata": {}
