--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -14,3 +14,7 @@ v0.9.4, 2013-08-12 -- Fix timestamp decode issues (force all timestamps to UTC),
 v0.9.5, 2014-03-01 -- Various bugfixes (fix timestamps for real), IANA updates,
                       some API changes, enhancements to (pre-alpha quality) 
                       netflow9 support and to support usage with numpy.
+
+v0.9.6, 2014-06-06 -- Test coverage improvements, consolidation of scripts,
+                      bugfixes (export time, reduced-length encoding), 
+                      update to latest IANA Information Element registry.
